Sonar cleanup (#421)
* Deprecated code should not be used java:S1874
* "Stream.toList()" method should be used instead of "collectors"
  when an unmodifiable list is needed java:S6204
* Local variables should not shadow class fields java:S1117